Update README with performance results and JVM details
Added performance results for low-end machines and updated detection JVM information.